# folding

./: .gitignore  CMakeLists.txt
src/: folding.cpp  main.cpp  test_folding.cpp
